@@ -5,6 +5,9 @@
 	  - "Hyphen-used-as-minus-sign" error has been fixed.
 	* configure.ac, libqrencode.pc.in, tests/Makefile.am:
 	  - Explicit link to libpthread has been eliminated.
+	* qrenc.c:
+	  - Pulled Repox's SVG patch (Pull request #10).
+	  - Slightly simplified.
 
 2012.04.01 Kentaro FUKUCHI <kentaro@fukuchi.org>
 	[3.3]
